data/derived/fa15/progs/unify/prog0481.ml.out
Characters 89-91:
  | (f, (h1, h2)) -> if h2 then f h1 else wwhile (h1, h2);;
                                                  ^^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'b
       The type variable 'a occurs inside 'a -> 'b
